force-app/main/default/objects/WD_Report__c/WD_Report__c.object-meta.xml
<CustomObject>
    <label>Job Order</label>
    <nameField>
        <displayFormat>JO-{00000}</displayFormat>
        <label>JO #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>