force-app/main/default/objects/WD_Report__c/fields/Additional_Charges__c.field-meta.xml
<CustomField>
    <fullName>Additional_Charges__c</fullName>
    <inlineHelpText>Any other daily charge that may be required to be charged eg.  Internet fees, electrician etc...</inlineHelpText>
    <label>Additional Charges</label>
    <type>TextArea</type>
</CustomField>