force-app/main/default/objects/WD_Report__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset #</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipName>WD_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>