force-app/main/default/objects/WD_Report__c/fields/Camp__c.field-meta.xml
<CustomField>
    <fullName>Camp__c</fullName>
    <label>Camp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>