force-app/main/default/objects/WD_Report__c/fields/Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact__c</fullName>
    <label>Client Contact</label>
    <length>30</length>
    <type>Text</type>
</CustomField>