force-app/main/default/objects/WD_Report__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <label>Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Water Tanker</fullName>
            </value>
            <value>
                <fullName>Road Train - Double</fullName>
            </value>
            <value>
                <fullName>Road Train - Triple</fullName>
            </value>
            <value>
                <fullName>Bed Truck</fullName>
            </value>
            <value>
                <fullName>Bed Truck + Trailer</fullName>
            </value>
            <value>
                <fullName>Float</fullName>
            </value>
            <value>
                <fullName>Float + Dolly</fullName>
            </value>
            <value>
                <fullName>Fuel Tanker</fullName>
            </value>
            <value>
                <fullName>Fuel Tanker - B Double</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>