force-app/main/default/objects/WD_Report__c/fields/Crew_Change_Day__c.field-meta.xml
<CustomField>
    <fullName>Crew_Change_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crew Change Day</label>
    <type>Checkbox</type>
</CustomField>