force-app/main/default/objects/WD_Report__c/fields/Derrickman__c.field-meta.xml
<CustomField>
    <fullName>Derrickman__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Derrickman</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>Rig_Daily_Reports2</relationshipName>
    <type>Lookup</type>
</CustomField>