force-app/main/default/objects/WD_Report__c/fields/Derrickman_Hours__c.field-meta.xml
<CustomField>
    <fullName>Derrickman_Hours__c</fullName>
    <label>Derrickman Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>