force-app/main/default/objects/WD_Report__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <inlineHelpText>Any relevant information can be entered to make tracking of invoicing more simple eg.. quote or lump sum, subcontractor name and cost??</inlineHelpText>
    <label>Details</label>
    <type>TextArea</type>
</CustomField>