force-app/main/default/objects/WD_Report__c/fields/Drill_Type__c.field-meta.xml
<CustomField>
    <fullName>Drill_Type__c</fullName>
    <label>Drill Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Injury/Illness</fullName>
            </value>
            <value>
                <fullName>Vehicle Machinery</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Environmental Spill</fullName>
            </value>
            <value>
                <fullName>Flood</fullName>
            </value>
            <value>
                <fullName>Heights Rescue</fullName>
            </value>
            <value>
                <fullName>Well Control Situation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>