force-app/main/default/objects/WD_Report__c/fields/Driller__c.field-meta.xml
<CustomField>
    <fullName>Driller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driller</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>Rig_Daily_Reports1</relationshipName>
    <type>Lookup</type>
</CustomField>