force-app/main/default/objects/WD_Report__c/fields/Driller_Hours__c.field-meta.xml
<CustomField>
    <fullName>Driller_Hours__c</fullName>
    <label>Driller Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>