force-app/main/default/objects/WD_Report__c/fields/Emergency_Drill__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Drill__c</fullName>
    <label>Emergency Drill</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>