force-app/main/default/objects/WD_Report__c/fields/Extra_Man__c.field-meta.xml
<CustomField>
    <fullName>Extra_Man__c</fullName>
    <inlineHelpText>Listed as extra man when not included in the day rate</inlineHelpText>
    <label>Extra Man (#)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>