force-app/main/default/objects/WD_Report__c/fields/Extra_Personnel__c.field-meta.xml
<CustomField>
    <fullName>Extra_Personnel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Extra Personnel</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>Rig_Daily_Reports6</relationshipName>
    <type>Lookup</type>
</CustomField>