force-app/main/default/objects/WD_Report__c/fields/Extra_Personnel_Hours__c.field-meta.xml
<CustomField>
    <fullName>Extra_Personnel_Hours__c</fullName>
    <label>Extra Personnel Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>