force-app/main/default/objects/WD_Report__c/fields/Floor_Hand__c.field-meta.xml
<CustomField>
    <fullName>Floor_Hand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Floor Hand</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>Rig_Daily_Reports4</relationshipName>
    <type>Lookup</type>
</CustomField>