force-app/main/default/objects/WD_Report__c/fields/Floor_Hand_Hours__c.field-meta.xml
<CustomField>
    <fullName>Floor_Hand_Hours__c</fullName>
    <label>Floor Hand Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>