force-app/main/default/objects/WD_Report__c/fields/Fuel_On_Hand_Formula__c.field-meta.xml
<CustomField>
    <fullName>Fuel_On_Hand_Formula__c</fullName>
    <formula>TEXT(Fuel_On_Hand__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fuel On Hand</label>
    <type>Text</type>
</CustomField>