force-app/main/default/objects/WD_Report__c/fields/Hard_Copy__c.field-meta.xml
<CustomField>
    <fullName>Hard_Copy__c</fullName>
    <label>WDR #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>