force-app/main/default/objects/WD_Report__c/fields/Hazards_Open__c.field-meta.xml
<CustomField>
    <fullName>Hazards_Open__c</fullName>
    <label>Hazards Raised</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
        </valueSetDefinition>
    </valueSet>
</CustomField>