force-app/main/default/objects/WD_Report__c/fields/Hazards_Raised__c.field-meta.xml
<CustomField>
    <fullName>Hazards_Raised__c</fullName>
    <label>Hazards Raised</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>