force-app/main/default/objects/WD_Report__c/fields/Hire_Items_Charge__c.field-meta.xml
<CustomField>
    <fullName>Hire_Items_Charge__c</fullName>
    <label>Hire Items - Charge</label>
    <type>TextArea</type>
</CustomField>