force-app/main/default/objects/WD_Report__c/fields/Inductions_Employee__c.field-meta.xml
<CustomField>
    <fullName>Inductions_Employee__c</fullName>
    <label>Inductions Employee</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>