force-app/main/default/objects/WD_Report__c/fields/Inspection_PMS_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Inspection_PMS_Hrs__c</fullName>
    <label>Inspection/PMS Hrs</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>