force-app/main/default/objects/WD_Report__c/fields/Inspection_PMS_Hrs_Formula__c.field-meta.xml
<CustomField>
    <fullName>Inspection_PMS_Hrs_Formula__c</fullName>
    <formula>TEXT( Inspection_PMS_Hrs__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspection/PMS Hrs</label>
    <type>Text</type>
</CustomField>