force-app/main/default/objects/WD_Report__c/fields/Inv__c.field-meta.xml
<CustomField>
    <fullName>Inv__c</fullName>
    <label>Inv#</label>
    <length>20</length>
    <type>Text</type>
</CustomField>