force-app/main/default/objects/WD_Report__c/fields/Invoicing_Information__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Information__c</fullName>
    <inlineHelpText>Please ensure any information regarding quotes/lump sums/hrly etc... is provided eg. Quote Number from Saasu or contracted Lump Sum Price</inlineHelpText>
    <label>Invoicing Information</label>
    <type>TextArea</type>
</CustomField>