force-app/main/default/objects/WD_Report__c/fields/JHA_s__c.field-meta.xml
<CustomField>
    <fullName>JHA_s__c</fullName>
    <label>JHA&apos;s</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
        </valueSetDefinition>
    </valueSet>
</CustomField>