force-app/main/default/objects/WD_Report__c/fields/Job_Order__c.field-meta.xml
<CustomField>
    <fullName>Job_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job Order #</label>
    <referenceTo>Job_Orders__c</referenceTo>
    <relationshipLabel>Job Orders</relationshipLabel>
    <relationshipName>Daily_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>