force-app/main/default/objects/WD_Report__c/fields/Leadfloor_Hand__c.field-meta.xml
<CustomField>
    <fullName>Leadfloor_Hand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leadfloor Hand</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>Rig_Daily_Reports3</relationshipName>
    <type>Lookup</type>
</CustomField>