force-app/main/default/objects/WD_Report__c/fields/Leadfloor_Hand_Hours__c.field-meta.xml
<CustomField>
    <fullName>Leadfloor_Hand_Hours__c</fullName>
    <label>Leadfloor Hand Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>