force-app/main/default/objects/WD_Report__c/fields/Leasehand__c.field-meta.xml
<CustomField>
    <fullName>Leasehand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leasehand</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>Rig_Daily_Reports5</relationshipName>
    <type>Lookup</type>
</CustomField>