force-app/main/default/objects/WD_Report__c/fields/Line_on_Spool__c.field-meta.xml
<CustomField>
    <fullName>Line_on_Spool__c</fullName>
    <label>Line on Spool</label>
    <length>40</length>
    <type>Text</type>
</CustomField>