force-app/main/default/objects/WD_Report__c/fields/Line_Slipped__c.field-meta.xml
<CustomField>
    <fullName>Line_Slipped__c</fullName>
    <label>Line Slipped</label>
    <length>40</length>
    <type>Text</type>
</CustomField>