force-app/main/default/objects/WD_Report__c/fields/LTI_Free_Days__c.field-meta.xml
<CustomField>
    <fullName>LTI_Free_Days__c</fullName>
    <label>LTI Free Days</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>