force-app/main/default/objects/WD_Report__c/fields/of_kms_from_Previous_Well__c.field-meta.xml
<CustomField>
    <fullName>of_kms_from_Previous_Well__c</fullName>
    <formula>Sales_Order__r.of_kms_from_Previous_Well__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of kms from Previous Well</label>
    <type>Text</type>
</CustomField>