force-app/main/default/objects/WD_Report__c/fields/Operating_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Operating_Hrs__c</fullName>
    <label>Operating Hrs</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>