force-app/main/default/objects/WD_Report__c/fields/Operating_Hrs_Formula__c.field-meta.xml
<CustomField>
    <fullName>Operating_Hrs_Formula__c</fullName>
    <formula>TEXT( Operating_Hrs__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operating Hrs</label>
    <type>Text</type>
</CustomField>