force-app/main/default/objects/WD_Report__c/fields/Pay_Ending_Date__c.field-meta.xml
<CustomField>
    <fullName>Pay_Ending_Date__c</fullName>
    <label>Pay Ending Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>