force-app/main/default/objects/WD_Report__c/fields/Permit_to_Work__c.field-meta.xml
<CustomField>
    <fullName>Permit_to_Work__c</fullName>
    <label>Permit to Work</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>