force-app/main/default/objects/WD_Report__c/fields/Previous_Well__c.field-meta.xml
<CustomField>
    <fullName>Previous_Well__c</fullName>
    <formula>Sales_Order__r.Previous_Well__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Well</label>
    <type>Text</type>
</CustomField>