force-app/main/default/objects/WD_Report__c/fields/Repair_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Repair_Hrs__c</fullName>
    <label>Repair Hrs</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>