force-app/main/default/objects/WD_Report__c/fields/Repair_Hrs_Formula__c.field-meta.xml
<CustomField>
    <fullName>Repair_Hrs_Formula__c</fullName>
    <formula>TEXT( Repair_Hrs__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repair Hrs</label>
    <type>Text</type>
</CustomField>