force-app/main/default/objects/WD_Report__c/fields/Report_TD__c.field-meta.xml
<CustomField>
    <fullName>Report_TD__c</fullName>
    <label>Report/Truck Docket #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>