force-app/main/default/objects/WD_Report__c/fields/Rig_Manager__c.field-meta.xml
<CustomField>
    <fullName>Rig_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rig Manager</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>Rig_Daily_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>