force-app/main/default/objects/WD_Report__c/fields/Rig_Manager_Hours__c.field-meta.xml
<CustomField>
    <fullName>Rig_Manager_Hours__c</fullName>
    <label>Rig Manager Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>