force-app/main/default/objects/WD_Report__c/fields/Rig_Move_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Rig_Move_Hrs__c</fullName>
    <label>Rig Move Hrs</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>