force-app/main/default/objects/WD_Report__c/fields/Rig_Move_Hrs_Formula__c.field-meta.xml
<CustomField>
    <fullName>Rig_Move_Hrs_Formula__c</fullName>
    <formula>TEXT( Rig_Move_Hrs__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rig Move Hrs</label>
    <type>Text</type>
</CustomField>