force-app/main/default/objects/WD_Report__c/fields/Safety_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Safety_Meetings__c</fullName>
    <label>Safety Meetings</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>