force-app/main/default/objects/WD_Report__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sales Order #</label>
    <referenceTo>Job_Orders__c</referenceTo>
    <relationshipName>Rig_Daily_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>