force-app/main/default/objects/WD_Report__c/fields/SOP_Review__c.field-meta.xml
<CustomField>
    <fullName>SOP_Review__c</fullName>
    <label>SOP Review</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>