force-app/main/default/objects/WD_Report__c/fields/Standby_WC_Hrs_Formula__c.field-meta.xml
<CustomField>
    <fullName>Standby_WC_Hrs_Formula__c</fullName>
    <formula>TEXT(Standby_WC_Hrs__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standby WC Hrs</label>
    <type>Text</type>
</CustomField>