force-app/main/default/objects/WD_Report__c/fields/Standby_WOC_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Standby_WOC_Hrs__c</fullName>
    <label>Standby WOC Hrs</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>