force-app/main/default/objects/WD_Report__c/fields/Standby_WOC_Hrs_Formula__c.field-meta.xml
<CustomField>
    <fullName>Standby_WOC_Hrs_Formula__c</fullName>
    <formula>TEXT( Standby_WOC_Hrs__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standby WOC Hrs</label>
    <type>Text</type>
</CustomField>