force-app/main/default/objects/WD_Report__c/fields/TBM__c.field-meta.xml
<CustomField>
    <fullName>TBM__c</fullName>
    <label>TBM</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>