force-app/main/default/objects/WD_Report__c/fields/Travel_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Travel_Hrs__c</fullName>
    <label>Travel Hrs</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>