force-app/main/default/objects/WD_Report__c/fields/Travel_Hrs_Formula__c.field-meta.xml
<CustomField>
    <fullName>Travel_Hrs_Formula__c</fullName>
    <formula>TEXT ( Travel_Hrs__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travel Hrs</label>
    <type>Text</type>
</CustomField>