force-app/main/default/objects/WD_Report__c/fields/TravelLoad_particulars__c.field-meta.xml
<CustomField>
    <fullName>TravelLoad_particulars__c</fullName>
    <label>Travel/Load Particulars</label>
    <type>TextArea</type>
</CustomField>