force-app/main/default/objects/WD_Report__c/fields/Truck_Driver__c.field-meta.xml
<CustomField>
    <fullName>Truck_Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Truck Driver</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>Rig_Daily_Reports7</relationshipName>
    <type>Lookup</type>
</CustomField>