force-app/main/default/objects/WD_Report__c/fields/Truck_Driver_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Truck_Driver_Hrs__c</fullName>
    <label>Truck Driver Hrs</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>