force-app/main/default/objects/WD_Report__c/fields/Truckson__c.field-meta.xml
<CustomField>
    <fullName>Truckson__c</fullName>
    <label>Trucks on Job</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hot Shot</fullName>
            </value>
            <value>
                <fullName>Escort Vehicle</fullName>
            </value>
            <value>
                <fullName>Subcontractor</fullName>
            </value>
            <value>
                <fullName>Loader</fullName>
            </value>
            <value>
                <fullName>U01</fullName>
            </value>
            <value>
                <fullName>U02</fullName>
            </value>
            <value>
                <fullName>U03</fullName>
            </value>
            <value>
                <fullName>U04</fullName>
            </value>
            <value>
                <fullName>U05</fullName>
            </value>
            <value>
                <fullName>U06</fullName>
            </value>
            <value>
                <fullName>U07</fullName>
            </value>
            <value>
                <fullName>U08</fullName>
            </value>
            <value>
                <fullName>U09</fullName>
            </value>
            <value>
                <fullName>U10</fullName>
            </value>
            <value>
                <fullName>U11</fullName>
            </value>
            <value>
                <fullName>U12</fullName>
            </value>
            <value>
                <fullName>U14</fullName>
            </value>
            <value>
                <fullName>U15</fullName>
            </value>
            <value>
                <fullName>U16</fullName>
            </value>
            <value>
                <fullName>U17</fullName>
            </value>
            <value>
                <fullName>U18</fullName>
            </value>
            <value>
                <fullName>U19</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>