force-app/main/default/objects/WD_Report__c/fields/Weather__c.field-meta.xml
<CustomField>
    <fullName>Weather__c</fullName>
    <inlineHelpText>40 char max</inlineHelpText>
    <label>Weather</label>
    <length>40</length>
    <type>Text</type>
</CustomField>