force-app/main/default/objects/WD_Report__c/recordTypes/Remote_Camp.recordType-meta.xml
<RecordType>
    <fullName>Remote_Camp</fullName>
    <active>true</active>
    <label>Remote Camp</label>
</RecordType>