force-app/main/default/objects/WD_Report__c/recordTypes/Remote_Camp_Approved.recordType-meta.xml
<RecordType>
    <fullName>Remote_Camp_Approved</fullName>
    <active>true</active>
    <label>Remote Camp (Approved)</label>
</RecordType>