force-app/main/default/objects/WD_Report__c/recordTypes/Transport_Approved.recordType-meta.xml
<RecordType>
    <fullName>Transport_Approved</fullName>
    <active>true</active>
    <label>Transport (Approved)</label>
</RecordType>