force-app/main/default/objects/WD_Report__c/recordTypes/X12_Hour_Rig.recordType-meta.xml
<RecordType>
    <fullName>X12_Hour_Rig</fullName>
    <active>true</active>
    <label>12 Hour Rig</label>
</RecordType>