force-app/main/default/objects/WD_Report__c/recordTypes/X12_Hour_Rig_Approved.recordType-meta.xml
<RecordType>
    <fullName>X12_Hour_Rig_Approved</fullName>
    <active>true</active>
    <label>12 Hour Rig (Approved)</label>
</RecordType>