force-app/main/default/objects/WD_Report__c/validationRules/Approver_should_not_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Approver_should_not_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Approved_By__c)</errorConditionFormula>
    <errorMessage>Approver should not be blank.</errorMessage>
</ValidationRule>