force-app/main/default/objects/WD_Report__c/listViews/C1_Safety_overview.listView-meta.xml
<ListView>
    <fullName>C1_Safety_overview</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Hard_Copy__c</columns>
    <columns>LTI_Free_Days__c</columns>
    <columns>Hazards_Raised__c</columns>
    <columns>Emergency_Drill__c</columns>
    <columns>SOP_Review__c</columns>
    <columns>Safety_Meetings__c</columns>
    <columns>Inductions_Employee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>WD_Report__c.Remote_Camp,WD_Report__c.Remote_Camp_Approved</value>
    </filters>
    <filters>
        <field>WD_Unit__c</field>
        <operation>equals</operation>
        <value>camp 1</value>
    </filters>
    <label>C1 - Safety Data Overview</label>
    <sharedTo>
        <group>Camp_3</group>
        <group>Managing_Director</group>
        <group>OPs_super</group>
        <group>Safety</group>
    </sharedTo>
</ListView>